--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,25 @@ main .carousel-inner .d-block{
 
 
 
+/* USER DESIGN */
+
+#userDesign{
+  width: 100%;
+  height: 70%;
+  position: fixed;
+  z-index: 10000;
+}
+
+#imgUserDesign{
+  border-radius: 50%;
+  display: inline-block;
+  height: 28%;
+  margin-left: 88%;
+  margin-top: 30%;
+  width: 13%; 
+}
+
+
 /*NOSOTROS */
 
 #nosotros h1{
